タイトルの変更

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>iris dataset</title>
+    <title>Iris Scatter Plot</title>
   </head>
   <body>
     <div id="content"></div>
